WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95488
[BlackBerry] when one of multiple tabs uses authentication, user can get the auth dialog while the other tab has focus.
https://bugs.webkit.org/show_bug.cgi?id=95488
Summary
[BlackBerry] when one of multiple tabs uses authentication, user can get the ...
Lyon Chen
Reported
2012-08-30 12:47:26 PDT
Observed Result: Constantly being prompted for username/password when one of multiple tabs uses NTLM style authentication Expected Result: Should not be prompted for username/password more than once when using multiple tabs Steps To Reproduce: open a tab and browse to a NTLM authenticated site
http://lifeatrim.rim.net/
enter the rim account name and password to login to the site open a new tab and browse to another site such as www.rim.com
Attachments
First patch for 95488
(18.71 KB, patch)
2012-09-06 19:26 PDT
,
Lyon Chen
yong.li.webkit
: review+
Details
Formatted Diff
Diff
Patch updated based on Yong's comments.
(19.06 KB, patch)
2012-09-07 08:14 PDT
,
Lyon Chen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lyon Chen
Comment 1
2012-08-30 12:48:00 PDT
Add [BlackBerry] to title.
Lyon Chen
Comment 2
2012-08-30 12:53:47 PDT
Add Yong, Joe, and Rob.
Lyon Chen
Comment 3
2012-09-06 19:26:14 PDT
Created
attachment 162653
[details]
First patch for 95488
Yong Li
Comment 4
2012-09-07 07:38:30 PDT
Comment on
attachment 162653
[details]
First patch for 95488 View in context:
https://bugs.webkit.org/attachment.cgi?id=162653&action=review
> Source/WebCore/ChangeLog:8 > + > + Add AuthenticationChallengeClient interface to support asynchronous
Better put the RIM PR number here, so we will be able to link the commit to the PR
> Source/WebCore/ChangeLog:16 > + Note: this patch itself will not fix this bug, but it prepares the base > + for the next patch by making the authentication asynchronous to NetworkJob > + and MediaPlayerPrivateBlackBerry.
why not put them together? That will make it easier for reviewer to understand how it will work
> Source/WebCore/ChangeLog:18 > + No new tests as there is no change of behavior.
Doing it in async mode is a big behavior change, with your next patch :) We don't have to upstream a layout test for our platform-specific test though.
> Source/WebCore/platform/network/blackberry/NetworkJob.cpp:832 > + if (result != AuthenticationChallengeSuccess > + || protectionSpace.host().isEmpty() > + || !url.isValid()) {
style: using one line is good enough?
Yong Li
Comment 5
2012-09-07 07:40:57 PDT
Comment on
attachment 162653
[details]
First patch for 95488 please put "internally reviewed by Joe Mason" in the change log. otherwise r+
Lyon Chen
Comment 6
2012-09-07 08:14:57 PDT
Created
attachment 162777
[details]
Patch updated based on Yong's comments. Yong: thanks, this is the updated patch, please check whether it is OK or need further improvement.
WebKit Review Bot
Comment 7
2012-09-07 10:12:55 PDT
Comment on
attachment 162777
[details]
Patch updated based on Yong's comments. Clearing flags on attachment: 162777 Committed
r127884
: <
http://trac.webkit.org/changeset/127884
>
WebKit Review Bot
Comment 8
2012-09-07 10:12:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug