Source/WebKit/blackberry/Api/WebPage_p.h
@@ -45,6 +45,7 @@
 #define DEFAULT_MAX_LAYOUT_HEIGHT 768
 
 namespace WebCore {
+class AuthenticationChallengeClient;
 class AutofillManager;
 class DOMWrapperWorld;
 class Document;
@@ -201,7 +202,7 @@ public:
     virtual int showAlertDialog(WebPageClient::AlertType atype);
     virtual bool isActive() const;
     virtual bool isVisible() const { return m_visible; }
-    virtual bool authenticationChallenge(const WebCore::KURL&, const WebCore::ProtectionSpace&, WebCore::Credential&);
+    virtual void authenticationChallenge(const WebCore::KURL&, const WebCore::ProtectionSpace&, const WebCore::Credential&, WebCore::AuthenticationChallengeClient*);
     virtual SaveCredentialType notifyShouldSaveCredential(bool);
     virtual void syncProxyCredential(const WebCore::Credential&);
 
